--- a/src/renderer/App.css
+++ b/src/renderer/App.css
@@ -1,10 +1,8 @@
-/*
- * @NOTE: Prepend a `~` to css file paths that are in your node_modules
- *        See https://github.com/webpack-contrib/sass-loader#imports
- */
+
 body {
   position: relative;
   color: white;
+  width: 100vw;
   height: 100vh;
   background: linear-gradient(
     200.96deg,
@@ -15,48 +13,41 @@ body {
   font-family: sans-serif;
   overflow-y: hidden;
   display: flex;
-  justify-content: center;
-  align-items: center;
+  margin: 0;
 }
 
-button {
-  background-color: white;
-  padding: 10px 20px;
-  border-radius: 10px;
-  border: none;
-  appearance: none;
-  font-size: 1.3rem;
-  box-shadow: 0px 8px 28px -6px rgba(24, 39, 75, 0.12),
-    0px 18px 88px -4px rgba(24, 39, 75, 0.14);
-  transition: all ease-in 0.1s;
-  cursor: pointer;
-  opacity: 0.9;
-}
-
-button:hover {
-  transform: scale(1.05);
-  opacity: 1;
-}
-
-li {
-  list-style: none;
-}
-
-a {
-  text-decoration: none;
-  height: fit-content;
-  width: fit-content;
-  margin: 10px;
-}
-
-a:hover {
-  opacity: 1;
-  text-decoration: none;
-}
-
-.Hello {
+.MenuBar {
   display: flex;
-  justify-content: center;
-  align-items: center;
-  margin: 20px 0;
+  width: 100vw;
+  min-width: min-content;
+  height: 30px;
+  background-color: #132B50;
+  border-bottom: 1px solid #5A6F8D;
+}
+
+.MenuBarButton {
+  height: 100%;
+  padding: 0px 8px 0px 8px;
+  background-color: #132B50;
+  color: white;
+  font-size: 10px;
+  border: none;
+  -webkit-transition: background-color 0.1s ease;
+  transition: background-color 0.1s ease;
+}
+
+.MenuBarButton:hover {
+  background-color: #193969;
+}
+
+.PanelContainer {
+  display: flex;
+  justify-content: space-between;
+}
+
+.PanelRight {
+  align-items: flex-end;
+  width: 20vw;
+  height: calc(100vh - 30px);
+  background-color: #132B50;
 }
